# htmx_rust_palyground

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
src/: main.rs  templating.rs
static/: index.html
static/css/: styles.css
templates/: hello_world.html
